--- a/data/patterndata.yml
+++ b/data/patterndata.yml
@@ -46,7 +46,7 @@ patterns:
     description: I’m not talking about surfing. These little guys travel through the air to your ears and make you wanna dance.
     imageSlug: waveform
   - name: Acid House
-    description: When the sound drips down: Minimalist production aesthetic combined house music's ubiquitous programmed 4/4 beat with the electronic ‘squelch' sound produced by the Roland TB-303.
+    description: When the sound drips down. Minimalist production aesthetic combined house music's ubiquitous programmed 4/4 beat with the electronic ‘squelch' sound produced by the Roland TB-303.
     imageSlug: acid-house
   - name: Ableton Push
     description: This thing can produce just about any sound out there. From drums to synths - you can probably create it with a Push.
