Pattern and style updates. First animation!

--- a/data/patterndata.yml
+++ b/data/patterndata.yml
@@ -79,7 +79,7 @@ patterns:
     description: PEW PEW PEW PEW PEW PEWWWWWWWW. REEEEMMMIIIXXXXXX! (Ugh, please no).
     imageSlug: air-horn
   - name: Trill
-    description: True & Real @ 100 
+    description: True & Real @ 100. 
     imageSlug: trill   
   - name: Master Levels
     description: Might want to turn that gain knob down a little bit sparky.
