--- a/data/patterndata.yml
+++ b/data/patterndata.yml
@@ -176,4 +176,7 @@ patterns:
     imageSlug: peace-sign
   - name: Coffee
     description: It’s been a long night of dancing and you need some fuel. Head to the nearest diner and grab a cup of joe and a few pancakes for a good old fashioned recharge. Make sure to use your favorite mug—mine’s Product Hunt branded.
-    imageSlug: product-hunt-coffee   
+    imageSlug: product-hunt-coffee  
+  - name: Synthesizer
+    description: An electronic musical instrument that generates electric signals converted to sound through loudspeakers or headphones.
+    imageSlug: synthesizer     
